<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Android App</string>
    <string name="full_name">Full Name</string>
    <string name="select_gender">Select Gender</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="enter_pin_code">Enter Pin Code</string>
    <string name="check">Check</string>
    <string name="register">Register</string>


    <!-- Title for the application. [CHAR LIMIT=12] -->

    <!-- Header that goes above the title of the earthquake event [CHAR LIMIT=50] -->
    <string name="header_event">Event</string>

    <!-- Header that goes above the date of the earthquake event [CHAR LIMIT=50] -->
    <string name="header_date">Date</string>

    <!-- Header that goes above whether or not there was a tsunami alert issued
         during the earthquake event [CHAR LIMIT=50] -->
    <string name="header_tsunami_alert">Tsunami Alert?</string>

    <!-- Text when there was no tsunami alert issued [CHAR LIMIT=50] -->
    <string name="alert_no">No</string>

    <!-- Text when there was a tsunami alert issued [CHAR LIMIT=50] -->
    <string name="alert_yes">Yes</string>

    <!-- Text when there was a tsunami alert issued [CHAR LIMIT=50] -->
    <string name="alert_not_available">Not available</string>

    <string name="feellikeTextView">Feel Like <xliff:g example="Name" id="feellike">%s</xliff:g></string>



    <string-array name="array_gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>