<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity.SignUpActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_26sdp"
                android:fontFamily="@font/gilroy_extra_bold"
                android:text="Registration"
                android:textColor="@color/gprimary"
                android:textSize="@dimen/_30sdp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:hint="@string/full_name"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconMode="clear_text"
                app:endIconTint="@color/gprimary"
                app:errorEnabled="true"
                app:errorTextColor="@color/red"
                app:helperTextTextColor="@color/red"
                app:startIconDrawable="@drawable/ic_round_person"
                app:startIconTint="@color/gprimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="20" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_30sdp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etGender"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    app:errorEnabled="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:startIconDrawable="@drawable/ic_round_supervisor_account"
                    app:startIconTint="@color/gprimary">


                    <AutoCompleteTextView
                        android:id="@+id/autoCompleteTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/genderTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_40sdp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="16dp"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:text="@string/select_gender"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/etGender"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etNumber"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:hint="@string/mobile_number"
                app:counterEnabled="true"
                app:endIconMode="clear_text"
                app:endIconTint="@color/gprimary"
                app:errorEnabled="true"
                app:errorTextColor="@color/red"
                app:startIconDrawable="@drawable/ic_round_phone"
                app:startIconTint="@color/gprimary"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="110dp">

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="10" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etDob"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:hint="Select DOB"
                app:errorEnabled="true"
                app:errorTextColor="@color/red"
                app:startIconDrawable="@drawable/ic_round_calendar"
                app:startIconTint="@color/gprimary"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="110dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passRl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="20" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etAddrss1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:hint="@string/address_line_1"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:endIconMode="clear_text"
                app:endIconTint="@color/gprimary"
                app:errorEnabled="true"
                app:errorTextColor="@color/red"
                app:helperTextTextColor="@color/red"
                app:startIconDrawable="@drawable/ic_round_place"
                app:startIconTint="@color/gprimary"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="110dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="50" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etAddrss2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:hint="@string/address_line_2"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:endIconMode="clear_text"
                app:endIconTint="@color/gprimary"
                app:errorEnabled="true"
                app:errorTextColor="@color/red"
                app:helperTextTextColor="@color/red"
                app:startIconDrawable="@drawable/ic_round_place"
                app:startIconTint="@color/gprimary"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="110dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="50" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etPinCode"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/enter_pin_code"
                    app:errorEnabled="true"
                    app:errorTextColor="@color/red"
                    app:helperTextTextColor="@color/red"
                    app:startIconDrawable="@drawable/ic_round_location"
                    app:startIconTint="@color/gprimary"
                    tools:layout_editor_absoluteX="1dp"
                    tools:layout_editor_absoluteY="110dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pineditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="6" />

                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/checkPinCode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_weight="1"
                    android:background="@drawable/background_button"
                    android:clickable="true"
                    android:text="@string/check"
                    android:textColor="@color/whiteColor" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:orientation="vertical"
                android:padding="@dimen/_8sdp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="1.5"
                        android:fontFamily="@font/gilroy_extra_bold"
                        android:text="Name : "
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/pinName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_8sdp"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="3"
                        android:fontFamily="@font/gilroy_light"
                        android:maxLength="19"
                        android:text="Default"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="1.5"

                        android:fontFamily="@font/gilroy_extra_bold"
                        android:text="District : "
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/pinDist"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_8sdp"

                        android:layout_marginBottom="16dp"
                        android:layout_weight="3"
                        android:fontFamily="@font/gilroy_light"
                        android:maxLength="19"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold"
                        tools:text="Default" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="1.5"
                        android:fontFamily="@font/gilroy_extra_bold"
                        android:text="State : "
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/pinState"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_8sdp"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="3"

                        android:fontFamily="@font/gilroy_light"
                        android:maxLength="19"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold"
                        tools:text="Default" />


                </LinearLayout>


            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_75sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_26sdp">


                <Button
                    android:id="@+id/registerButton"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_weight="2"
                    android:background="@drawable/background_button"
                    android:elevation="@dimen/_10sdp"
                    android:onClick="regstrBtn"
                    android:text="@string/register"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <ImageButton
                    android:id="@+id/forwardButton"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:layout_weight="2"
                    android:background="@drawable/background_button_circle"
                    android:elevation="@dimen/_10sdp"
                    android:onClick="nextActivity"
                    android:src="@drawable/ic_round_arrow_forward"
                    android:text="@string/register"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </ScrollView>


</LinearLayout>